--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,12 @@
             <version>${org.springframework-version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.47</version>
+        </dependency>
+
 
         <!--DBCP-->
         <dependency>
